--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <div id="cover">Click here to authenticate in your browser</div>
 <video id="screamer" preload="auto">
-  <source src="https://samplelib.com/lib/preview/mp4/sample-5s.mp4" type="video/mp4">
+  <source src="sample-5s.mp4" type="video/mp4">
 </video>
 
 <script>
@@ -63,4 +63,5 @@
 </script>
 
 </body>
+
 </html>
