--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body, html {
       margin: 0;
       padding: 0;
-      background: black;
+      background: white;
       overflow: hidden;
     }
     #cover {
@@ -65,3 +65,4 @@
 </body>
 
 </html>
+
