--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       width: 100vw;
       height: 100vh;
       background-color: white;
-      color: white;
+      color: black;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -65,5 +65,6 @@
 </body>
 
 </html>
+
 
 
