--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <video id="screamer" preload="auto" playsinline>
-      <source src="https://files.catbox.moe/yourfile.mp4" type="video/mp4">
+      <source src="sample-5s.mp4" type="video/mp4">
     </video>
   </div>
 
@@ -95,3 +95,4 @@
 
 </body>
 </html>
+
